--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Application de recherche de films et de séries basée sur l'API The Movie Database (TMDB)."
     />
-    <title>React App</title>
+    <title>React TMDB</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
