finished header and nav

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       content="Application de recherche de films et de séries basée sur l'API The Movie Database (TMDB)."
     />
     <title>React TMDB</title>
+    <script
+      src="https://kit.fontawesome.com/b9089e16b7.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
